--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button onclick="onPanTo()"class="btn-pan">Pan Map to Tokyo</button>
 
     <p>You are at: <span class="user-pos"></span></p>
-    <p>Locations: <span class="locs"></span></p>
+    <p>Places: <span class="locs"></span></p>
     
 
     <script type="module" src="js/app.controller.js"></script>
