--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>You are at: <span class="user-pos"></span></p>
     <p>Locations: <span class="locs"></span></p>
 
-    <p>places</p>
+    <p>places 2</p>
 
     <script type="module" src="js/app.controller.js"></script>
   </body>
