--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
 
     <p>You are at: <span class="user-pos"></span></p>
     <p>Places: <span class="locs"></span></p>
-
-    <p>places 2</p>
+    <table border="1" style="padding: 4px">
+      <thead>
+        <tr>
+          <td>Name</td>
+          <td>Lat</td>
+          <td>Lng</td>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
 
     <script type="module" src="js/app.controller.js"></script>
   </body>
