--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <tbody></tbody>
     </table>
 
+    <script src="lib/swal.js"></script>
     <script type="module" src="js/app.controller.js"></script>
   </body>
 </html>
