--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </button>
     <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button>
     <button onclick="onPanTo()" class="btn-pan">Pan Map to Tokyo</button>
-
+    <input type="text" class="geolocation" /> <button>go to address</button>
     <p>You are at: <span class="user-pos"></span></p>
     <p>Places: <span class="locs"></span></p>
     <table border="1" style="padding: 4px">
