--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     </button>
     <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button>
     <button onclick="onPanTo()" class="btn-pan">Pan Map to Tokyo</button>
-    <input type="text" class="geolocation" /> <button>go to address</button>
+    <input
+      type="text"
+      name="geolocation"
+      onchange="onSearch(event,this.value)"
+    />
     <p>You are at: <span class="user-pos"></span></p>
     <p>Places: <span class="locs"></span></p>
     <table border="1" style="padding: 4px">
@@ -30,6 +34,7 @@
       <tbody></tbody>
     </table>
     <script src="./lib/swal.js"></script>
+    <script src="./lib/axios.js"></script>
     <script type="module" src="js/app.controller.js"></script>
   </body>
 </html>
